# boo

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  install.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/actions/kiro-review/: action.yml
.github/workflows/: ci.yml  kiro-artifact-review.yml  kiro-auto-fix-branch.yml  kiro-code-review.yml  kiro-codebase-scan.yml  kiro-docs-drift.yml  kiro-pr-review.yml  kiro-review-reusable.yml  kiro-security-gate.yml  kiro-test-gap-finder.yml  open-issue-from-review.yml  release.yml
.kiro/agents/: code-reviewer.json  code-reviewer.md  codebase-scanner.json  docs-drift-reviewer.json  docs-drift-reviewer.md  fix-branch-writer.json  fix-branch-writer.md  review-pass.json  review-scorer.json  security-reviewer.json  security-reviewer.md  test-gap-finder.json  test-gap-finder.md
.kiro/prompts/: code-review.md  codebase-scan.md
.kiro/reviews/: 2026-04-16T22-43-00Z.json  2026-04-17T20-42-42Z.json
.kiro/skills/review-criteria/: SKILL.md
assets/: boo-url-handler.swift
docs/: kiro-ci-smoke.md
scripts/: normalize-review-output.mjs  parse-review-command.mjs  post-pr-review.mjs  run-kiro-review.mjs  run-kiro-review.sh  select-review-finding.mjs  test-review-scripts.mjs  test-review-scripts.sh
src/: acp.rs  clock.rs  config.rs  cron_eval.rs  error.rs  executor.rs  installer.rs  job.rs  lib.rs  main.rs  notification_service.rs  notifier.rs  scheduler.rs  store.rs
tests/: cli.rs
