[package]
name = "boo"
version = "0.1.0"
edition = "2021"
description = "Cross-platform scheduler daemon for kiro-cli prompts"

[dependencies]
croner = "2"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
notify-rust = "4"
fs2 = "0.4"
thiserror = "2"
glob = "0.3.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
proptest = "1"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
