[package]
name = "boo"
version = "0.3.0"
edition = "2021"
description = "Cross-platform scheduler daemon for kiro-cli prompts"

[dependencies]
croner = "3"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
fs2 = "0.4"
thiserror = "2"
glob = "0.3.3"
user-notify = "0.4.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = ["Win32_Foundation", "Win32_System_ProcessStatus", "Win32_System_Threading"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
